fixing info typo

--- a/session_dnd_summer_2025.html
+++ b/session_dnd_summer_2025.html
@@ -54,14 +54,14 @@
 			    <img src="images/Dungeons_and_Dragons_Poster.png" style="width:40%;" alt="Dungeons and Dragons 2025 summer camp poster.">
     			<div class="camp-info-text">
             <p><b> Ages: </b> 8-12 </p>
-            <p><b> Time: </b> 2:30-4:30PM	</p>
+            <p><b> Time: </b> 12:15-2:15PM	</p>
             <p><b> Location: </b> Boulder Public Library - Main Branch </p>
             <p><b>Cost:</b> $250 </p>
             <p><b>Sessions:</b> 6 </p>
         		<p><b> Session Dates: </b></p>
         		<div style="margin-left: 50px;">
               — June 14th <br>
-              — June 24th <br>
+              — June 21st <br>
               — June 28th <br>
               — July 12th <br>
               — July 19th <br>
