--- a/session_tnt_summer_2025.html
+++ b/session_tnt_summer_2025.html
@@ -62,7 +62,7 @@
         		<p><b> Session Dates: </b></p>
         		<div style="margin-left: 50px;">
               — June 14th <br>
-              — June 24th <br>
+              — June 21st <br>
               — June 28th <br>
               — July 12th <br>
               — July 19th <br>
