--- a/index.html
+++ b/index.html
@@ -194,22 +194,32 @@
 
     <div>
 		    <h2 class="title">Contact Us</h2>
-		    <div class="contact">
-				  <div class="contact-list">
-					    <h5><span><i class="fa fa-envelope w3-xlarge w3-text-light-grey"></i></span>Email</h5>
-					    <p> grimoiregamesco@gmail.com </p>
-			    </div>
-		    </div>
+        <div class="contact-div">
+    		    <div class="contact">
+    				  <div class="contact-list">
+    					    <h5><span><i class="fa fa-envelope w3-xlarge w3-text-light-grey"></i></span>Email</h5>
+    					    <p> grimoiregamesco@gmail.com </p>
+    			    </div>
+    		    </div>
 
- 		    <div class="contact">
- 				  <div class="contact-list">
- 					    <h5><span><i class="fa fa-phone w3-xlarge w3-text-light-grey"></i></span>Phone</h5>
- 					    <p> 720-854-4488 </p>
- 			    </div>
- 		    </div>
+     		    <div class="contact">
+     				  <div class="contact-list">
+     					    <h5><span><i class="fa fa-phone w3-xlarge w3-text-light-grey"></i></span>Phone</h5>
+     					    <p> 720-854-4488 </p>
+     			    </div>
+     		    </div>
+
+          <!--
+            <div class="contact">
+     				  <div class="contact-list">
+     					    <h5><span><i class="fa fa-facebook-official w3-xlarge w3-text-light-grey"></i></span>Facebook</h5>
+                  <a href="https://facebook.com/grimoiregamesco">facebook.com/grimoiregamesco</a>
+     			    </div>
+     		    </div>
+        -->
+        </div>
 	  </div>
 </main>
-
 
 <script>
 	var acc = document.getElementsByClassName("accordion");
