Adding specific page titles

--- a/session_dnd_summer_2025.html
+++ b/session_dnd_summer_2025.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title> Grimoire Games | D&D Summer Camps in Boulder </title>
+    <title> Grimoire Games | D&D </title>
     <link rel="icon" type="image/png" href="images/book-logo.png">
     <meta name="description" content="Join us this June for a story-rich Dungeons & Dragons summer camp where adventurers of all experience levels come together to explore magical realms! Ages 8-12. Boulder, Colorado.">
     <meta charset="UTF-8">
