Content update: registration deadline and groups

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<div class="top-bar header" id="home">
 			<div class="w3-bar  w3-card w3-left-align w3-large header-large-screen">
 				<div class="header-text-div" style="display:contents;">
-					<p style="margin-left:auto;margin-right:auto;text-align: center; color:orange;"> Registration closes May 25th! <p>
+					<p style="margin-left:auto;margin-right:auto;text-align: center; font-weight:600; color:orange;"> Registration extended — now closes June 1st! <p>
           <div class="right" style="display:flex;margin-left:auto;">
               <p onclick="document.location='index.html'"
                  class="nav-bar-first" style="margin-right:10px;color:black;"> Home | <p>
@@ -114,6 +114,8 @@
 						<h3 onclick="document.location='session_dnd_summer_2025.html'">Dungeons and Dragons </h3>
 					</div>
 					<div class="session-info-text">
+            <p> <b>Group 1 (12:15-2:15PM): FULL</b></p>
+            <p> <b>Group 2 (2:30-4:30PM):</b> OPEN</p>
 						<p> <b>Dates:</b> Saturdays, June 14-28 & July 12-26 </p>
 						<p style="margin-top:10px"> Join us this June for a story-rich Dungeons & Dragons summer camp where adventurers of all
 							experience levels come together to explore magical realms! Ages 8-12.
