--- a/payment_tnt.html
+++ b/payment_tnt.html
@@ -33,7 +33,7 @@
     <div class="top-bar header" id="home">
       <div class="w3-bar  w3-card w3-left-align w3-large header-large-screen">
         <div class="header-text-div" style="display:contents;">
-					<p style="margin-left:auto;margin-right:auto;text-align: center; color:orange;"> Registration closes May 25th! <p>
+					<p style="margin-left:auto;margin-right:auto;text-align: center; font-weight:600; color:orange;"> Registration extended — now closes June 1st! <p>
           <div class="right" style="display:flex;margin-left:auto;">
               <p onclick="document.location='index.html'"
                  class="nav-bar-first" style="margin-right:10px;color:black;"> Home | <p>
