--- a/session_dnd_summer_2025.html
+++ b/session_dnd_summer_2025.html
@@ -30,7 +30,7 @@
     <div class="top-bar header" id="home">
       <div class="w3-bar  w3-card w3-left-align w3-large header-large-screen">
         <div class="header-text-div" style="display:contents;">
-					<p style="margin-left:auto;margin-right:auto;text-align: center; color:orange;"> Registration closes May 25th! <p>
+					<p style="margin-left:auto;margin-right:auto;text-align: center; font-weight:600; color:orange;"> Registration extended — now closes June 1st! <p>
           <div class="right" style="display:flex;margin-left:auto;">
               <p onclick="document.location='index.html'"
                  class="nav-bar-first" style="margin-right:10px;color:black;"> Home | <p>
@@ -63,7 +63,14 @@
 			    <img src="images/Dungeons_and_Dragons_Poster.png" style="width:40%;" alt="Dungeons and Dragons 2025 summer camp poster.">
     			<div class="camp-info-text">
             <p><b> Ages: </b> 8-12 </p>
-            <p><b> Time: </b> 12:15-2:15PM	</p>
+            <div class="session-groups" style="background-color:#dadada">
+                <p><b> Group 1: FULL</b></p>
+                <p><b> Time: </b> 12:15-2:15PM	</p>
+            </div>
+            <div class="session-groups">
+                <p><b> Group 2: </b> OPEN	</p>
+                <p><b> Time: </b> 2:30-4:30PM	</p>
+            </div>
             <p><b> Location: </b> Boulder Public Library - Main Branch </p>
             <p><b>Cost:</b> $220 </p>
             <p><b>Sessions:</b> 6 </p>
@@ -100,7 +107,7 @@
               </ul>
             <br>
             <p><b> ** Limited signups available! Register soon! ** </b></p>
-            <p><b> ** Registration closes May 25th! ** </b></p>
+            <p style="color: red;"><b> ** Registration closes June 1st! ** </b></p>
     				<br><br>
     				<button class="register-button" style="display:block;margin-left:auto;margin-right:auto;" onclick="document.location='camper_information_form.html'"> Register </button>
     			</div>
