--- a/session_tnt_summer_2025.html
+++ b/session_tnt_summer_2025.html
@@ -30,7 +30,7 @@
     <div class="top-bar header" id="home">
       <div class="w3-bar  w3-card w3-left-align w3-large header-large-screen">
         <div class="header-text-div" style="display:contents;">
-					<p style="margin-left:auto;margin-right:auto;text-align: center; color:orange;"> Registration closes May 25th! <p>
+					<p style="margin-left:auto;margin-right:auto;text-align: center; font-weight:600; color:orange;"> Registration extended — now closes June 1st! <p>
           <div class="right" style="display:flex;margin-left:auto;">
               <p onclick="document.location='index.html'"
                  class="nav-bar-first" style="margin-right:10px;color:black;"> Home | <p>
@@ -102,7 +102,7 @@
                 </ul>
             <br>
             <p><b> ** Limited signups available! Register soon! ** </b></p>
-            <p><b> ** Registration closes May 25th! ** </b></p>
+            <p style="color: red;"><b> ** Registration closes June 1st! ** </b></p>
         		<br><br>
         		<button class="register-button"  style="display:block;margin-left:auto;margin-right:auto;" onclick="document.location='camper_information_form_tnt.html'"> Register </button>
         	</div>
