minor content update

--- a/index.html
+++ b/index.html
@@ -289,11 +289,10 @@
 									</button>
 									<div class="panel" style="border-bottom-left-radius:30px;border-bottom-right-radius:30px">
 										<p class="acc-text">
-											That’s awesome! There are plenty of ways to keep the adventure going. Local game stores (like The Wizard’s Chest)
-											often host D&D events, and many kids form their own groups to play at home or online.
+											Come back! We run campaigns throughout the year, join our mailing to get email updates for new campaigns!
 											<br>
-											If your child wants to keep playing but isn’t sure where to start, we’re happy to help! We offer advice
-											and guidance for forming a group and running their own games.
+											Also, local game stores (like The Wizard’s Chest) often host D&D events, and many kids form their own groups to play at home or online.
+											If your child wants to keep playing but isn’t sure where to start, we’re happy to help! We offer advice and guidance for forming a group and running their own games.
 										</p>
 									</div>
 								</div>
