--- a/dnd-returnplayers.html
+++ b/dnd-returnplayers.html
@@ -102,6 +102,7 @@
                       <p style="margin-top:-25px;margin-bottom:0px;text-align:left;color:red;">— SKIP October  4</p>
                       <p style="text-align:left;">
                         — October  11 <br>
+												— October  18 <br>
                         — October  25 <br>
                         — November 1 <br>
                       <b>Description:</b> Meet on Saturdays throughout September, October, and November in a reserved room at the Boulder Public Library.
