--- a/dnd-returnplayers.html
+++ b/dnd-returnplayers.html
@@ -6,9 +6,9 @@
 -->
 <html>
 	<head>
-    <title>Grimoire Games | D&D Summer Camps in Boulder </title>
+		<title>Grimoire Games | D&D Clubs, Camps & Adventures in Boulder</title>
 		<link rel="icon" type="image/png" href="images/book-logo-square.png">
-		<meta name="description" content="Join us this June for a story-rich Dungeons & Dragons summer camp where adventurers of all experience levels come together to explore magical realms! Ages 8-12. Boulder, Colorado.">
+		<meta name="description" content="Grimoire Games offers Dungeons & Dragons after-school programs and summer camps in Boulder, Colorado. Kids ages 8–12 join story-driven adventures, build teamwork skills, and explore imaginative worlds.">
 		<script type="application/ld+json">
 			{
 				"@context" : "https://schema.org",
@@ -114,7 +114,10 @@
                       We’ll continue to provide all materials needed to play, along with light snacks each session. Players are welcome to bring their own dice, character sheets, or gear from the summer session.
                       <br><br>
                       </p>
-                      <button class="register-button" style="display:block;margin-left:auto;margin-right:auto;" onclick="document.location='camper-info-form-returnplayers.html'"> Register </button>
+											<p style="text-align:center;color:red;">
+                        Registration Closed
+                      </p>
+                      <button disabled class="register-button" style="background-color:#e99f9f;display:block;margin-left:auto;margin-right:auto;" onclick="document.location='camper-info-form-returnplayers.html'"> Register </button>
               </section>
             </div>
           </section>
