--- a/payment-returnplayers.html
+++ b/payment-returnplayers.html
@@ -6,9 +6,9 @@
 -->
 <html>
 	<head>
-    <title>Grimoire Games | D&D Summer Camps in Boulder </title>
+		<title>Grimoire Games | D&D Clubs, Camps & Adventures in Boulder</title>
 		<link rel="icon" type="image/png" href="images/book-logo-square.png">
-		<meta name="description" content="Join us this June for a story-rich Dungeons & Dragons summer camp where adventurers of all experience levels come together to explore magical realms! Ages 8-12. Boulder, Colorado.">
+		<meta name="description" content="Grimoire Games offers Dungeons & Dragons after-school programs and summer camps in Boulder, Colorado. Kids ages 8–12 join story-driven adventures, build teamwork skills, and explore imaginative worlds.">
 		<script type="application/ld+json">
 			{
 				"@context" : "https://schema.org",
