Winter session update

--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
 								<ul>
 									<li><a href="index.html">Home</a></li>
 									<li>
-										<a href="#">Current Sessions</a>
+										<a href="#">Sessions</a>
 										<ul>
-											<li><a href="dnd-afterschool-bpl.html">D&D After School - BPL</a></li>
-											<li><a href="dnd-returnplayers.html">D&D [Return Players Only]</a></li>
+											<li><a href="dnd-winter.html">D&D Winter Session</a></li>
 											<!--
 											<li>
 												<a href="#">After School D&D</a>
@@ -131,11 +130,26 @@
 					<section class="container">
 						<header class="major">
 							<h2><b>
-								Current Sessions
+								Upcoming Sessions
 							</b></h2>
 						</header>
 						<div class="row features">
-
+							<section class="col-12 col-12-narrower feature">
+								<div class="session-container" style="display:flex;" onclick="document.location='dnd-winter.html'">
+									<img class="session-image" src="images/dnd-winter.png" alt=""/>
+									<div style="display:block;text-align:left;padding:20px;">
+										<h2 style="color:white;font-weight:500;">
+											Dungeons and Dragons Winter Session
+										</h2>
+										<hr style="border-color:white;">
+										<p style="color:white;">
+											Join us this Winter at the Boulder Public Library for a story-rich Dungeons & Dragons campaign where adventurers of all
+											experience levels come together to explore magical realms! Ages 8-12.
+										</p>
+									</div>
+								<div>
+							</section>
+							<!--
 							<section class="col-12 col-12-narrower feature">
 								<div class="session-container" style="display:flex;" onclick="document.location='dnd-afterschool-bpl.html'">
 									<img class="session-image" src="images/dnd-afterschool.png" alt=""/>
@@ -169,6 +183,8 @@
 									</div>
 								<div>
 							</section>
+						-->
+
 						</div>
 					</section>
 				</div>
@@ -313,7 +329,7 @@
 										<li class="icon brands fa-facebook-f"><a href="https://www.facebook.com/grimoiregamesco"><span class="extra">facebook.com/</span>grimoiregamesco</a></li>
 									</ul>
 									<ul class="divided icons col-4 col-12-mobile">
-										<li class="icon fa-comment">720-854-4488</li>
+										<li class="icon fa-comment">‪720-432-3119‬</li>
 									</ul>
 									<ul class="divided icons col-4 col-12-mobile">
 										<li class="icon fa-envelope"><span class="extra">grimoiregamesco@gmail.com</li>
