--- a/registration-complete.html
+++ b/registration-complete.html
@@ -43,10 +43,9 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Current Sessions</a>
+									<a href="#">Sessions</a>
 									<ul>
-										<li><a href="dnd-afterschool-bpl.html">D&D After School - BPL</a></li>
-										<li><a href="dnd-returnplayers.html">D&D [Return Players Only]</a></li>
+										<li><a href="dnd-winter.html">D&D Winter Session</a></li>
 										<!--
 										<li>
 											<a href="#">After School D&D</a>
