--- a/template.html
+++ b/template.html
@@ -43,7 +43,7 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Current Sessions</a>
+									<a href="#">Sessions</a>
 									<ul>
 										<li><a href="dnd-afterschool-bpl.html">D&D After School - BPL</a></li>
 										<li><a href="dnd-returnplayers.html">D&D [Return Players Only]</a></li>
