Second session update

--- a/dnd-winter-2.html
+++ b/dnd-winter-2.html
@@ -90,18 +90,18 @@
                     <h2><b>Dungeons and Dragons Winter Session</b></h2><br>
                       <p>
                         <b> Ages: </b> 8-12 <br>
-                        <b> Time: </b> 12-2 PM <br>
+                        <b> Time: </b> 2-4 PM <br>
                         <b> Location: </b> Boulder Public Library - Main Branch <br>
                         <b>Cost:</b> $225 <br>
                         <b>Sessions:</b> 6 <br>
                     		<b> Session Dates: </b> <br>
-                          — November  22 <br>
                           — November  29 <br>
                           — December  6 <br>
                           — December  13 <br>
                           — December  20 <br>
                           — January  3 <br>
-                        <b>Description:</b> Meet for 2 hours on Saturdays throughout November, December, and January to participate in a group role play game. <br><br>
+                          — January  18 (SUNDAY) <br>
+                        <b>Description:</b> Meet for 2 hours on Saturdays (and one Sunday) throughout November, December, and January to participate in a group role play game. <br><br>
 
               					Embark on a journey where imagination knows no bounds! Join us this Winter
               					for a story-rich Dungeons & Dragons campaign where adventurers of all
@@ -128,7 +128,7 @@
                         * We believe every adventurer should have access to this experience. Payment plans and financial assistance are available—please contact us if cost is a concern.</i>
                       </p>
               				<br>
-              				<button class="register-button" style="display:block;margin-left:auto;margin-right:auto;" onclick="document.location='dnd-winter-info-form.html'"> Register </button>
+              				<button class="register-button" style="display:block;margin-left:auto;margin-right:auto;" onclick="document.location='dnd-winter-info-form-2.html'"> Register </button>
               </section>
             </div>
           </section>
