--- a/index.html
+++ b/index.html
@@ -149,6 +149,22 @@
 									</div>
 								<div>
 							</section>
+
+							<section class="col-12 col-12-narrower feature">
+								<div class="session-container" style="display:flex;" onclick="document.location='dnd-winter-2.html'">
+									<img class="session-image" src="images/dnd-winter.png" alt=""/>
+									<div style="display:block;text-align:left;padding:20px;">
+										<h2 style="color:white;font-weight:500;">
+											Dungeons and Dragons Winter Session #2
+										</h2>
+										<hr style="border-color:white;">
+										<p style="color:white;">
+											Join us this Winter at the Boulder Public Library for a story-rich Dungeons & Dragons campaign where adventurers of all
+											experience levels come together to explore magical realms! Ages 8-12.
+										</p>
+									</div>
+								<div>
+							</section>
 							<!--
 							<section class="col-12 col-12-narrower feature">
 								<div class="session-container" style="display:flex;" onclick="document.location='dnd-afterschool-bpl.html'">
